# GoalKeeper

./: .gitignore  Agent.md  FloorPlan.md  LICENSE  README.md  Resource.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Docs/: ARCHITECTURE_GoalKeeper.md  SRS_GoalKeeper.md
examples/sample-vault/Evidence/: TR-1.md
examples/sample-vault/Safe-System/: C1.md  G1.md  G2.md  S1.md  Sn1.md  _layout.json
scripts/: with-raised-nofile.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: GearMenu.tsx  Icon.tsx  OpenVaultDialog.tsx
src/core/: index.ts
src/core/export/: report.ts
src/core/graph/: cycle.ts  reachability.ts
src/core/layout/: manager.ts
src/core/markdown/: frontmatter.ts  parse.ts
src/core/model/: types.ts
src/core/rules/: relationships.ts  validate.ts
src/core/vault/: load.ts
src/features/structure/: DetailPanel.tsx  GsnCanvas.tsx
src/features/wizard/: WizardDialog.tsx
src/lib/: fs.ts
src/state/: store.ts
src/styles/: app.css  art-nouveau.css  tokens.css
tests/core/: frontmatter.test.ts  graph.test.ts  layout.test.ts  markdown.test.ts  rules.test.ts
