[package]
name = "goalkeeper"
version = "0.1.0"
description = "GoalKeeper — standalone GSN assurance-case desktop app"
authors = ["netrisk2025"]
edition = "2021"

[lib]
name = "goalkeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
